--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "css-loader": "^6.7.1",
     "eslint": "^8.23.1",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.0.3",
+    "jsdoc": "^3.6.11",
     "sass": "^1.54.9",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
